--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,10 @@
 @import 'tailwindcss';
+@import '@fontsource/fira-mono';
+
 @import '@skeletonlabs/skeleton';
 @import '@skeletonlabs/skeleton/optional/presets';
 @import '@skeletonlabs/skeleton/themes/wintry';
-@import '@fontsource/fira-mono';
+@import '@skeletonlabs/skeleton/themes/cerberus';
 
 @source '../node_modules/@skeletonlabs/skeleton-svelte/dist';
 @plugin '@tailwindcss/forms';
@@ -15,6 +17,7 @@
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 
+	background-color: var(--color-bg);
 	color: var(--color-text);
 }
 
